--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Altmann Grotesk Medium';
+    letter-spacing: 0.056em;
 }
 
 header {
@@ -54,13 +55,15 @@ h2 {
     font-size: 11rem;
     /* font-size: 6rem; */
     text-transform: uppercase;
-    letter-spacing: .4rem;
     line-height: 1;
+    margin: 0 auto;
 }
 
 h3 {
-    font-size: 4rem;
+    font-size: 5rem;
     text-transform: uppercase;
+    margin-top: 0;
+    padding-left: 3rem;
 }
 
 h4 {
@@ -70,6 +73,19 @@ h4 {
 
 h5 {
     font-size: 1.5rem;
+    text-transform: uppercase;
+    line-height: .8;
+    margin: .5rem 0 0;
+}
+
+h6 {
+    text-transform: uppercase;
+    margin: 1rem auto .5rem;
+}
+
+a {
+    all: unset;
+    cursor: pointer;
 }
 
 p {
@@ -89,10 +105,18 @@ small {
     font-size: .85rem;
 }
 
-.legenda {
-    display: block;
+figure {
+    margin: 0;
+}
+
+figcaption {
     font-family: 'Source Sans 3', sans-serif;
     font-style: italic;
+    padding: 0 var(--min-padding);
+}
+
+.section-padding {
+    padding: 0 var(--min-padding);
 }
 
 .quote {
@@ -106,10 +130,20 @@ small {
     font-weight: 600;
 }
 
+.italic {
+    font-style: italic;
+}
+
 .green {
     color: var(--green);
 }
 
+.list-item {
+    letter-spacing: .039em;
+}
+
+/* HEADER */
+/* 1. Top Bar */
 .top-bar--wrapper {
     padding: 2rem var(--min-padding) 0;
 
@@ -123,20 +157,15 @@ small {
     width: 7rem;
 }
 
-.top-bar--wrapper h5 {
-    text-transform: uppercase;
-    line-height: .8;
-    margin: .5rem 0 0;
-}
-
-.top-bar--wrapper .address {
+.top-bar--wrapper .left {
     text-align: left;
 }
 
-.top-bar--wrapper .contact {
+.top-bar--wrapper .right {
     text-align: right;
 }
 
+/* 2. Navigation */
 .navigation {
     display: flex; /* pra centralizar o conteúdo verticalmente */
 }
@@ -162,83 +191,50 @@ small {
     }
 }
 
-@media screen and (min-width: 1350px) {
-    /* .nav-list {
-        font-size: 6rem;
-    } */
-}
-
-header .row {
+.nav-row {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.nav-list span {
+.nav-row span {
     display: none;
 }
 
 @media screen and (min-width: 880px) {
-    header .row {
+    .nav-row {
         flex-direction: row;
     }
 
-    .nav-list span {
+    .nav-row span {
         display: inline-block;
         width: 100%;
         height: 78%;
         border: 0.7px solid rgba(0, 0, 0, .5);
-        /* background-color: red; */
     }
 }
 
-header .row-1,
-header .row-3 {
+.nav-row:nth-child(1),
+.nav-row:nth-child(3) {
     justify-content: space-between;
 }
 
-header .row-2,
-header .row-4 {
+.nav-row:nth-child(2),
+.nav-row:nth-child(4) {
     justify-content: space-around;
 }
 
 .header-graphic {
-    position: relative;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    height: 1rem;
     width: 50%;
     margin: auto;
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0) 45%, rgba(0,0,0,1) 50%, rgba(255,255,255,0) 55%);
 }
 
-.header-graphic::before {
-    position: absolute;
-    content: '';
-    width: 2rem;
-    height: 2rem;
-    left: 50%;
-    transform: translateX(-50%) translateY(-30%);
-    background-color: orange;
-    z-index: -1;
-}
-
-/* .historia-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
-        "historia-titulo historia-titulo"
-        "historia-graphic historia-graphic"
-        "historia-texto historia-texto"
-        "historia-image historia-image";
-} */
-
-.historia-section .row-1 {
+/* HISTORY SECTION */
+.section-row:nth-child(1) {
     display: flex;
 }
 
-.historia-section .row-2 {
+.section-row:nth-child(2) {
     display: flex;
     justify-content: flex-end;
     gap: 2rem;
@@ -246,90 +242,38 @@ header .row-4 {
     padding: var(--min-padding) var(--min-padding);
 }
 
-.historia-section .row-2 > * {
+.section-row > p {
     width: 30%;
 }
 
-.historia-graphic {
-    /* grid-area: historia-graphic; */
+.history-graphic {
     width: 45%;
     padding: 0 var(--min-padding);
-    /* min-height: 5rem; */
 }
 
-.historia-title--wrapper {
+.history-title--wrapper {
     text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.historia-image {
+.history-title--wrapper h2 {
+    margin-bottom: 4rem;
+}
+
+.history-section figure {
     text-align: right;
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, var(--orange) 30%);
 }
 
-.historia-image > img {
+.history-section figure > img {
     width: 80vw;
 }
 
-.historia-image > .legenda {
-    padding-right: var(--min-padding);
-}
-
-/* .historia-title--wrapper {
-    grid-area: historia-titulo;
-    text-align: right;
-}
-
-.historia-text--wrapper {
-    grid-area: historia-texto;
-
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-
-}
-
-.historia-text--wrapper > .text {
-    flex-basis: fit-content;
-}
-
-.historia-title--wrapper,
-.historia-text--wrapper {
-    padding-right: var(--min-padding);
-}
-
-.historia-image {
-    grid-area: historia-image;
-    background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,177,0,1) 30%);
-    text-align: right;
-}
-
-.historia-image img {
-    background-color: black;
-    width: 80vw;
-    height: 100vh;
-}
-
-.historia-section .legenda {
-    margin-right: 2rem;
-} */
-
-@media screen and (min-width: 740px) {
-    /* .historia-section {
-        grid-template-areas: 
-            "historia-graphic historia-titulo"
-            " . historia-texto"
-            "historia-image historia-image"
-        ;
-    }
-
-    .historia-text--wrapper {
-        flex-direction: row;
-    } */
-}
-
-.energia-section {
+/* ENERGY SECTION */
+.energy-section {
     display: flex;
     /* flex-direction: column; MOBILE*/
     flex-direction: row;
@@ -337,39 +281,29 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
     padding-right: var(--min-padding)
 }
 
-/* .energia-grid--container {
+/* .energy-grid--container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 } MOBILE */
 
-.energia-grid--container {
+.energy-grid--container {
     aspect-ratio: 1/1;
     display: grid;
     grid-template-columns: repeat(15, minmax(0, 1fr));
     grid-template-rows: repeat(15, minmax(0, 1fr));
 }
 
-.energia-grid--container > * {
+.energy-grid--container > * {
     margin: 0;
 }
 
-.energia-grid--container span.legenda {
-    margin-top: 1rem;
-    text-align: right;
-}
-
-.energia-grid--container small.legenda {
-    margin-left: var(--min-padding);
-}
-
-.title {
+.energy-section h2 {
     grid-column-start: 2;
-    /* letter-spacing: .4rem; */
     /* font-size: 4rem; */
 }
 
-.subtitle {
+.energy-section h4 {
     grid-column-start: 10;
     grid-column-end: 16;
 
@@ -378,44 +312,42 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
     font-size: 3.3rem;
 }
 
-.p1 {
+.energy-section p:nth-of-type(1) {
     grid-column-start: 5;
     grid-column-end: 9;
 
     grid-row-start: 5;
 }
 
-.p2 {
+.energy-section p:nth-of-type(2) {
     grid-column-start: 5;
     grid-column-end: 9;
 
     grid-row-start: 7;
 }
 
-.p3 {
+.energy-section p:nth-of-type(3) {
     grid-column-start: 10;
     grid-column-end: 15;
 
     grid-row-start: 7;
-
-    font-style: italic;
 }
 
-.p4 {
+.energy-section p:nth-of-type(4) {
     grid-column-start: 10;
     grid-column-end: 15;
 
     grid-row-start: 11;
 }
 
-.image {
+.energy-section figure {
     grid-column-start: 1;
     grid-column-end: 9;
 
     grid-row-start: 10;
 }
 
-.image img {
+.energy-section figure > img {
     width: 100%;
     height: auto;
 }
@@ -454,14 +386,15 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
 .timeline > .logo {
     height: 2rem;
     width: 2rem;
+    margin-right: -1rem;
 }
 
 .timeline::before {
     position: absolute;
     content: '';
-    top: 3%;
-    bottom: 4.5%;
-    right: 1rem;
+    top: 4%;
+    bottom: 5.5%;
+    /* right: 1rem; */
 
     background-color: var(--gray);
     width: 1px;
@@ -473,45 +406,75 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
     margin-bottom: 0;
 }
 
-.projetos-section {
+/* PROJECTS SECTION */
+.projects-section {
     background-image: url(img/projetos.svg);
     background-repeat: no-repeat;
-    background-size:80%;
-    background-position: left;
+    background-size: 90%;
     background-origin: content-box;
+    background-position-y: 70%;
 }
 
-.servicos-section h2,
-.projetos-section h2 {
+.services-section h2,
+.projects-section h2 {
     font-size: 8rem;
     text-align: right;
     word-break: break-all;
+    margin: 0 auto;
 }
 
-.projetos-section,
-.clientes-section,
-.fornecedores-section,
-.servicos-section,
-.estrutura-section {
-    padding: 0 var(--min-padding);
-    letter-spacing: .5rem;
+.clients-title--wrapper {
+    background-image: url(img/clientes.svg);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-origin: content-box;
+    background-position-x: 80%;
 }
 
-.projetos-section > *,
-.clientes-section > *,
-.fornecedores-section > * {
-    margin: 0;
-}
-
-.clientes-title--wrapper {
+.clients-title--wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.clientes-section h3,
-.clientes-section p {
+.clients-section h3,
+.clients-section p {
     display: inline-block;
+}
+
+.number {
+    font-family: 'Altmann Grotesk Medium';
+    margin: 0 auto;
+}
+
+.number > span {
+    font-size: 20%;
+    vertical-align: super;
+}
+
+.large.number {
+    text-align: center;
+    font-size: 20rem;
+    line-height: 1;
+}
+
+.medium.number {
+    font-size: 14rem;
+    display: inline-block;
+}
+
+.suppliers-section h3 {
+    position: relative;
+}
+
+.suppliers-section h3::after {
+    position: absolute;
+    content: '';
+    width: 50%;
+    height: 1px;
+    top: 50%;
+    left: 40%;
+    background-color: var(--gray);
 }
 
 .logos--grid {
@@ -525,52 +488,19 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
 }
 
 .logos--grid img {
-    background-color: var(--gray);
-    height: 10rem;
-    width: 10rem;
+    width: auto;
+    height: 7.5rem;
 }
 
-.big-number {
-    text-align: center;
-    font-size: 20rem;
-    line-height: 1;
-}
-
-.medium-number {
-    text-align: right;
-    font-size: 17rem;
-    display: inline-block;
-    margin: 0;
-}
-
-.big-number > span,
-.medium-number > span {
-    font-size: 20%;
-    vertical-align: super;
-}
-
-.fornecedores-section h3 {
-    position: relative;
-}
-
-.fornecedores-section h3::after {
-    position: absolute;
-    content: '';
-    width: 50%;
-    height: 1px;
-    top: 50%;
-    left: 40%;
-    background-color: var(--gray);
-}
-
-.servicos-section h2 {
+.services-section h2 {
     line-height: 1;
     border: 1px solid var(--gray);
     padding: 2rem 2rem 1rem;
     position: relative;
+    margin-bottom: 2rem;
 }
 
-.servicos-section h2::before {
+.services-section h2::before {
     position: absolute;
     content: '';
     background-color: var(--gray);
@@ -580,17 +510,17 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
     left: 0;
 }
 
-.lista-item {
+.list-item {
     font-size: 1.5rem;
     text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
+    line-height: 2;
     position: relative;
     width: 100%;
     overflow-x: hidden;
 }
 
-.lista-item::after {
+.list-item::after {
     position: absolute;
     content: '';
     background-color: var(--gray);
@@ -599,13 +529,70 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
     top: 50%;
 }
 
-.estrutura-text--wrapper {
+.structure-section {
+    min-height: 40vh;
+    padding-bottom: 10rem;
+}
+
+.structure-text--wrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     gap: 2rem;
 }
 
-.estrutura-text--wrapper small {
+.structure-section h2 {
+    margin-bottom: 2rem;
+}
+
+.structure-text--wrapper small {
     text-align: justify;
+    margin-bottom: 4rem;
+}
+
+.structure-graphic {
+    width: 7rem;
+    align-self: center;
+}
+
+.address-section {
+    border: 1px solid var(--gray);
+    padding-top: 2rem;
+    padding-bottom: 2rem
+}
+
+.end-section {
+    margin-top: 0;
+    min-height: 100vh;
+    background-image: url(img/historia-placeholder.jpg);
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.end-section > img {
+    height: 20rem;
+    width: auto;
+}
+
+footer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    align-content: start;
+    gap: 2rem;
+    padding: var(--min-padding);
+}
+
+footer .logo {
+    flex: 1;
+    align-self: center;
+}
+
+footer .logo > img {
+    width: 10rem;
+}
+
+footer small {
+    font-size: 70%;
 }
