--- a/style.css
+++ b/style.css
@@ -401,20 +401,14 @@ figcaption {
 }
 
 .energy-grid--container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
+    grid-template-columns: 1fr;
+    width: 100%;
     gap: 1rem;
     max-width: 1500px;
-} 
-
-.energy-grid--container {
-    aspect-ratio: 1/1;
-    display: flex;
     padding: var(--min-padding);
-    /* display: grid; */
-    /* grid-template-columns: repeat(15, minmax(0, 1fr)); */
-    /* grid-template-rows: repeat(15, auto); */
-}
+} 
 
 .energy-grid--container > * {
     margin: 0;
@@ -468,7 +462,7 @@ figcaption {
     position: absolute;
     content: '';
     bottom: 0;
-
+    
     background-color: var(--gray);
     width: 100%;
     height: 1px;
@@ -482,10 +476,11 @@ figcaption {
 
 @media screen and (min-width: 740px) {
     .energy-grid--container {
+        aspect-ratio: 1/1;
         display: grid;
         grid-template-columns: repeat(15, minmax(0, 1fr));
         grid-template-rows: repeat(6, auto);
-
+        
         padding: 0;
         padding-right: calc(var(--min-padding) / 1.5);
     }
