--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     --font-family-nav: 'Albra Grotesk Medium-Traced-Web';
     --font-family-caption: 'Source Sans 3', sans-serif;
 
-    --font-size-xl: clamp(6rem, 0.068rem + 18.983vw, 20rem); /*6rem - 20rem: .large.number*/
+    --font-size-xl: clamp(4rem, -2.78rem + 21.695vw, 20rem); /*4rem - 20rem: .large.number*/
     --font-size-l: clamp(4rem, -0.237rem + 13.559vw, 14rem); /*4rem - 14rem: .medium.number*/
     --font-size-0: clamp(4rem, 1.034rem + 9.492vw, 11rem); /*4rem - 11rem: .large-title*/
     --font-size-1: clamp(3.5rem, 1.169rem + 7.458vw, 9rem); /*3.5rem - 9rem: .title, h2*/
@@ -838,20 +838,27 @@ figcaption {
 
 .services-section h2,
 .projects-section h2 {
-    text-align: left;
+    text-align: right;
+    margin: 0 auto;
+}
+
+.projects-section h2 {
     overflow-wrap: break-word;
     hyphens: manual;
     -webkit-hyphens: manual;
-    -webkit-hyphenate-character: "";
-    hyphenate-character: "";
-    margin: 0 auto;
+    -webkit-hyphenate-character: "_";
+    hyphenate-character: "_";
+    text-align: left;
+    margin-bottom: 2rem;
 }
 
 @media screen and (min-width: 740px) {
     .projects-section h2 {
         text-align: right;
+        margin-bottom: 0;
     }
 }
+
 /* CLIENTS SECTION */
 .clients-title--wrapper {
     background-image: url(img/clientes.svg);
